# Kills-And-Death-System

./: .gitignore  README.md  pyproject.toml
src/endstone_kills_deaths_system/: __init__.py  my_plugin.py
